--- a/css/readerStyle.css
+++ b/css/readerStyle.css
@@ -45,7 +45,7 @@
 }
 .imgComment{
     width: 100%;
-    background-color: #345678b5;
+    background-color: #345678a5;
     /*
     border: 2px solid black;
     border-radius: 3px;
@@ -53,7 +53,9 @@
     margin: 3px;
     */
     margin-top: 3px;
-    
+}
+.imgComment:hover{
+    background-color: #345678e5;
 }
 .imgRenderCanvas{
     border: 2px solid black;
